start implementing project permissions in endpoints, document roadmap and features
